# TFG

./: CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: on-release-main.yml
docs/: index.md  modules.md
tests/: test_foo.py
tfg/: app.py  test.py
tfg/components/: checkbox_map.py  top_app_bar.py
tfg/data/: series_list.py
tfg/utils/: LocationMap.py
tfg/views/: recommendations_view.py  search_series_view.py  user_form_view.py
